Fix dark mode check box bug.

--- a/client/src/App-default.css
+++ b/client/src/App-default.css
@@ -25,13 +25,6 @@
     background-color: var(--button-color-default);
 }
 
-.green-hp {
-    height: 100%;
-    background-color: green;
-    border: 0px solid black;
-    border-radius: 10px;
-}
-
 .hit-point-box {
     background-color: white;
     max-width: 500px;
